# honey

./: LICENSE  README.md  main.py  pyproject.toml
examples/prompts/: system.hny
experiments/: README.md  example_async.py  example_sync.py  sample.py  test_gemini.py
experiments/hive/: loader.py
experiments/prompts/: demo.hny
hive/: __init__.py  jars.py
src/honey/: __init__.py  jars.py  loader.py
src/honey/jars/: __init__.py  anthropic.py  base.py  gemini.py  mock.py  openai.py
tests/: conftest.py
tests/fixtures/prompts/: complex.hny  multi.hny  simple.hny
tests/hive/: test_integration.py  test_jars.py  test_jars_async.py  test_loader.py  test_loader_async.py
tests/honey/: test_integration.py  test_jars.py  test_jars_async.py  test_loader.py  test_loader_async.py
